--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     background: #1f242d;
     color:#fff;
-    /*background-image: url('/images/backg.jpg');*/
+    background-image: url(/images/2d.jpg);
     background-size:100%;
 }
 
@@ -29,25 +29,33 @@ header {
 }
 
 .logo {
-    font-size: 25px;
+    font-size: 50px;
     color: #fff; 
     text-decoration: none;
     font-weight: 600;
     cursor: default;
+    text-shadow: 0px 5px 12px #fff;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
 }
 
 .navbar a {
-    font-size: 18px;
+    display: inline-block;
+    font-size: 25px;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-left: 35px; 
     transition: .3s;  
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
 }
 
 .navbar a:hover,
 .navbar a.active {
     color: purple;
+    text-shadow: 0px 5px 8px white;
 }
 
 .home {
@@ -67,18 +75,119 @@ header {
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: .7s;
+}
+
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 30px;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .7s;
 }
 
 .home-content h3 span {
-    color: purple;
+    color:  purple;
+   
 }
 
 .home-content h1 {
     font-size: 56px;
     font-weight: 700;
+    margin: -3px 0;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: 1s;
+}
+
+.home-content p {
+    font-size: 16px;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
 }
 
 .home-img img {
     max-width: 450px;
-    box-shadow: 12px 12px 5px purple;
+    margin-right: -60px;
+}
+
+.social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid purple;
+    border-radius: 50%;
+    font-size: 20px;
+    color: purple;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+    transition: 0.5s ease;
+}
+
+.social-media a:hover {
+    background:purple;
+    color: white;
+    box-shadow: 0 0 20px white;
+}
+
+.btn {
+    display: inline-block;
+    padding: 12px 28px;
+    background: white;
+    border-radius: 40px;
+    box-shadow: 0 0 10px white;
+    text-decoration: none;
+    font-size: 16px;
+    color: purple;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+
+
+@keyframes slideRight {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideTop {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideBottom {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
